[gd_scene load_steps=3 format=3 uid="uid://dwrg8mixvr10l"]

[ext_resource type="Script" uid="uid://bwrhcw1pkb0ht" path="res://kinematic/kinematic.gd" id="1_6t0eu"]
[ext_resource type="PackedScene" uid="uid://bgrfmbdih2bpq" path="res://collision/hit_box.tscn" id="2_2nuuy"]

[node name="Kinematic" type="CharacterBody2D"]
collision_layer = 0
collision_mask = 7
motion_mode = 1
script = ExtResource("1_6t0eu")

[node name="HitBox" parent="." instance=ExtResource("2_2nuuy")]

[node name="Label" type="Label" parent="."]
offset_left = -19.0
offset_top = -21.0
offset_right = 21.0
offset_bottom = 2.0
text = "#"
horizontal_alignment = 1

[connection signal="died" from="HitBox" to="." method="_on_hit_box_died"]
[connection signal="health_changed" from="HitBox" to="." method="_on_hit_box_health_changed"]
[connection signal="hurt" from="HitBox" to="." method="_on_hit_box_hurt"]

[editable path="HitBox"]
